Update docs for new template

--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -14,5 +14,12 @@
   'blog': 'https://www.pytorchlightning.ai/blog',
   'resources': 'https://pytorch-lightning.readthedocs.io/en/latest/#community-examples',
   'support': 'https://pytorch-lightning.rtfd.io/en/latest/',
+  'community': 'https://pytorch-lightning.slack.com',
+  'forums': 'https://pytorch-lightning.slack.com',
+  'pldocs': 'https://pytorch-lightning.readthedocs.io/en/stable/',
+  'tmdocs': 'https://torchmetrics.readthedocs.io/en/stable/',
+  'fldocs': 'https://lightning-flash.readthedocs.io/en/stable/',
+  'lbdocs': 'https://lightning-bolts.readthedocs.io/en/stable/',
+  'gdocs': 'https://docs.grid.ai/',
 }
 -%}
